--- a/VQVAE.ipynb
+++ b/VQVAE.ipynb
@@ -17,6 +17,7 @@
     "date: \"November 6, 2024\"\n",
     "number-sections: true\n",
     "reference-location: margin\n",
+    "toc: true\n",
     "format: \n",
     "  html:\n",
     "    code-fold: false\n",
@@ -28,6 +29,7 @@
     "filters:\n",
     "  - code-visibility\n",
     "theme: united\n",
+    "github: \"https://github.com/TugdualKerjan/Audio-VQVAE-for-JAX\"\n",
     "lightbox: true\n",
     "---"
    ]
@@ -36,6 +38,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "For the full project, visit the [GitHub repository](https://github.com/TugdualKerjan/Audio-VQVAE-for-JAX).\n",
+    "\n",
     "# Context 👀\n",
     "\n",
     "I'm trying to rewrite XTTS in JAX to understand how it works. \n",
@@ -376,7 +380,7 @@
    "source": [
     "### UpsampledConv {#sec-plot}\n",
     "\n",
-    "Before we move onto the decoder we have to define a special layer that replaces the ConvTranspose that we would normally use. TODO understand I admit I still am still not sure why they use this instead.\n",
+    "Before we move onto the decoder we have to define a special layer that replaces the ConvTranspose that we would normally use. I admit I still am not sure of the use of this.\n",
     "\n",
     "Their code for this function:\n",
     "\n",
