Fixed major error in quantizer

--- a/VQVAE.ipynb
+++ b/VQVAE.ipynb
@@ -631,7 +631,8 @@
     "        # Straight-through estimator\n",
     "        z_q = flatten + jax.lax.stop_gradient(z_q - flatten)\n",
     "\n",
-    "        z_q = jax.numpy.permute_dims(z_q, (1, 0))\n",
+    "        # z_q = jax.numpy.permute_dims(z_q, (1, 0))\n",
+    "        z_q = jax.numpy.reshape(z_q, (-1, x.shape[-1]))\n",
     "\n",
     "        return z_q, self.codebook_updates(flatten, codebook_indices)\n",
     "\n",
@@ -882,7 +883,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -930,7 +931,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1165,9 +1166,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/79/hdfw6x594jbbkfl6hzwf8cxw0000gn/T/ipykernel_33659/686084589.py:49: UserWarning: FigureCanvasAgg is non-interactive, and thus cannot be shown\n",
+      "  fig.show()\n"
+     ]
+    },
+    {
+     "ename": "IndexError",
+     "evalue": "tuple index out of range",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[8], line 70\u001b[0m\n\u001b[1;32m     67\u001b[0m writer\u001b[38;5;241m.\u001b[39madd_scalar(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mLoss/Commit\u001b[39m\u001b[38;5;124m'\u001b[39m, commit_loss, step)\n\u001b[1;32m     69\u001b[0m writer\u001b[38;5;241m.\u001b[39madd_histogram(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mCodebook Updates/Code ids used\u001b[39m\u001b[38;5;124m'\u001b[39m, jnp\u001b[38;5;241m.\u001b[39mreshape(codebook_updates[\u001b[38;5;241m1\u001b[39m], \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m), step)\n\u001b[0;32m---> 70\u001b[0m writer\u001b[38;5;241m.\u001b[39madd_histogram(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mCodebook Updates/Code means\u001b[39m\u001b[38;5;124m'\u001b[39m, jnp\u001b[38;5;241m.\u001b[39mmean(codebook_updates[\u001b[38;5;241m0\u001b[39m][\u001b[38;5;241m2\u001b[39m], axis\u001b[38;5;241m=\u001b[39m(\u001b[38;5;241m0\u001b[39m,\u001b[38;5;241m2\u001b[39m)), step)\n\u001b[1;32m     71\u001b[0m writer\u001b[38;5;241m.\u001b[39madd_histogram(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mCodebook Updates/Code stds\u001b[39m\u001b[38;5;124m'\u001b[39m, jnp\u001b[38;5;241m.\u001b[39mstd(codebook_updates[\u001b[38;5;241m0\u001b[39m][\u001b[38;5;241m2\u001b[39m], axis\u001b[38;5;241m=\u001b[39m(\u001b[38;5;241m0\u001b[39m,\u001b[38;5;241m2\u001b[39m)), step)\n\u001b[1;32m     72\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m (i \u001b[38;5;241m/\u001b[39m\u001b[38;5;241m/\u001b[39m batch_size) \u001b[38;5;241m%\u001b[39m \u001b[38;5;241m20\u001b[39m \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m0\u001b[39m:\n",
+      "File \u001b[0;32m~/miniconda3/envs/jaxtts/lib/python3.11/site-packages/jax/_src/numpy/reductions.py:738\u001b[0m, in \u001b[0;36mmean\u001b[0;34m(a, axis, dtype, out, keepdims, where)\u001b[0m\n\u001b[1;32m    681\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mmean\u001b[39m(a: ArrayLike, axis: Axis \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m, dtype: DTypeLike \u001b[38;5;241m|\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m,\n\u001b[1;32m    682\u001b[0m          out: \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m, keepdims: \u001b[38;5;28mbool\u001b[39m \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mFalse\u001b[39;00m, \u001b[38;5;241m*\u001b[39m,\n\u001b[1;32m    683\u001b[0m          where: ArrayLike \u001b[38;5;241m|\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m Array:\n\u001b[1;32m    684\u001b[0m \u001b[38;5;250m  \u001b[39m\u001b[38;5;124mr\u001b[39m\u001b[38;5;124;03m\"\"\"Return the mean of array elements along a given axis.\u001b[39;00m\n\u001b[1;32m    685\u001b[0m \n\u001b[1;32m    686\u001b[0m \u001b[38;5;124;03m  JAX implementation of :func:`numpy.mean`.\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    736\u001b[0m \u001b[38;5;124;03m           [6. ]], dtype=float32)\u001b[39;00m\n\u001b[1;32m    737\u001b[0m \u001b[38;5;124;03m  \"\"\"\u001b[39;00m\n\u001b[0;32m--> 738\u001b[0m   \u001b[38;5;28;01mreturn\u001b[39;00m _mean(a, _ensure_optional_axes(axis), dtype, out, keepdims,\n\u001b[1;32m    739\u001b[0m                where\u001b[38;5;241m=\u001b[39mwhere)\n",
+      "    \u001b[0;31m[... skipping hidden 11 frame]\u001b[0m\n",
+      "File \u001b[0;32m~/miniconda3/envs/jaxtts/lib/python3.11/site-packages/jax/_src/numpy/reductions.py:765\u001b[0m, in \u001b[0;36m_mean\u001b[0;34m(a, axis, dtype, out, keepdims, upcast_f16_for_computation, where)\u001b[0m\n\u001b[1;32m    763\u001b[0m     normalizer \u001b[38;5;241m=\u001b[39m core\u001b[38;5;241m.\u001b[39mdimension_as_value(np\u001b[38;5;241m.\u001b[39msize(a))\n\u001b[1;32m    764\u001b[0m   \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m--> 765\u001b[0m     normalizer \u001b[38;5;241m=\u001b[39m core\u001b[38;5;241m.\u001b[39mdimension_as_value(_axis_size(a, axis))\n\u001b[1;32m    766\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m    767\u001b[0m   normalizer \u001b[38;5;241m=\u001b[39m \u001b[38;5;28msum\u001b[39m(_broadcast_to(where, np\u001b[38;5;241m.\u001b[39mshape(a)), axis,\n\u001b[1;32m    768\u001b[0m                    dtype\u001b[38;5;241m=\u001b[39mcomputation_dtype, keepdims\u001b[38;5;241m=\u001b[39mkeepdims)\n",
+      "File \u001b[0;32m~/miniconda3/envs/jaxtts/lib/python3.11/site-packages/jax/_src/numpy/reductions.py:677\u001b[0m, in \u001b[0;36m_axis_size\u001b[0;34m(a, axis)\u001b[0m\n\u001b[1;32m    675\u001b[0m a_shape \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mshape(a)\n\u001b[1;32m    676\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m a \u001b[38;5;129;01min\u001b[39;00m axis_seq:\n\u001b[0;32m--> 677\u001b[0m   size \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m=\u001b[39m maybe_named_axis(a, \u001b[38;5;28;01mlambda\u001b[39;00m i: a_shape[i], \u001b[38;5;28;01mlambda\u001b[39;00m name: lax\u001b[38;5;241m.\u001b[39mpsum(\u001b[38;5;241m1\u001b[39m, name))\n\u001b[1;32m    678\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m size\n",
+      "    \u001b[0;31m[... skipping hidden 1 frame]\u001b[0m\n",
+      "File \u001b[0;32m~/miniconda3/envs/jaxtts/lib/python3.11/site-packages/jax/_src/numpy/reductions.py:677\u001b[0m, in \u001b[0;36m_axis_size.<locals>.<lambda>\u001b[0;34m(i)\u001b[0m\n\u001b[1;32m    675\u001b[0m a_shape \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mshape(a)\n\u001b[1;32m    676\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m a \u001b[38;5;129;01min\u001b[39;00m axis_seq:\n\u001b[0;32m--> 677\u001b[0m   size \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m=\u001b[39m maybe_named_axis(a, \u001b[38;5;28;01mlambda\u001b[39;00m i: a_shape[i], \u001b[38;5;28;01mlambda\u001b[39;00m name: lax\u001b[38;5;241m.\u001b[39mpsum(\u001b[38;5;241m1\u001b[39m, name))\n\u001b[1;32m    678\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m size\n",
+      "\u001b[0;31mIndexError\u001b[0m: tuple index out of range"
+     ]
+    }
+   ],
    "source": [
     "%matplotlib inline\n",
     "from IPython.display import display, clear_output\n",
@@ -1176,6 +1203,8 @@
     "import datetime\n",
     "import os\n",
     "import jax\n",
+    "import jax.numpy as jnp\n",
+    "import equinox as eqx\n",
     "import optax\n",
     "from tensorboardX import SummaryWriter\n",
     "\n",
