--- a/VQVAE.ipynb
+++ b/VQVAE.ipynb
@@ -882,7 +882,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -890,7 +890,7 @@
     "from tensorboardX import SummaryWriter\n",
     "\n",
     "\n",
-    "def update_codebook_ema(model: VQVAE, updates: tuple, codebook_indices, key=None):\n",
+    "def update_codebook_ema(model, updates: tuple, codebook_indices, key=None):\n",
     "    avg_updates = jax.tree.map(lambda x: jax.numpy.mean(x, axis=0), updates)\n",
     "\n",
     "    # Calculate which codes are too often used and yeet them. Prior is uniform.\n",
@@ -930,10 +930,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
     "@eqx.filter_jit\n",
     "@eqx.filter_value_and_grad(has_aux=True)\n",
     "def calculate_losses(model, x):\n",
@@ -1167,19 +1168,37 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "RuntimeError",
+     "evalue": "Deserialised leaf at path (GetAttrKey(name='quantizer'), GetAttrKey(name='codebook')) has changed shape from (1024, 512) in `like` to (1024,) on disk.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[7], line 40\u001b[0m\n\u001b[1;32m     37\u001b[0m key1, key2 \u001b[38;5;241m=\u001b[39m jax\u001b[38;5;241m.\u001b[39mrandom\u001b[38;5;241m.\u001b[39msplit(key, \u001b[38;5;241m2\u001b[39m)\n\u001b[1;32m     39\u001b[0m model \u001b[38;5;241m=\u001b[39m VQVAE(key\u001b[38;5;241m=\u001b[39mkey1)\n\u001b[0;32m---> 40\u001b[0m model \u001b[38;5;241m=\u001b[39m \u001b[43meqx\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mtree_deserialise_leaves\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43m./xttsvqvae.eqx\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mmodel\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     41\u001b[0m optimizer \u001b[38;5;241m=\u001b[39m optax\u001b[38;5;241m.\u001b[39madam(\u001b[38;5;241m1e-4\u001b[39m)\n\u001b[1;32m     42\u001b[0m opt_state \u001b[38;5;241m=\u001b[39m optimizer\u001b[38;5;241m.\u001b[39minit(model)\n",
+      "File \u001b[0;32m~/miniconda3/envs/jaxtts/lib/python3.11/site-packages/equinox/_serialisation.py:333\u001b[0m, in \u001b[0;36mtree_deserialise_leaves\u001b[0;34m(path_or_file, like, filter_spec, is_leaf)\u001b[0m\n\u001b[1;32m    328\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m jax\u001b[38;5;241m.\u001b[39mensure_compile_time_eval():\n\u001b[1;32m    329\u001b[0m     \u001b[38;5;66;03m# ArrayImpl isn't a public type, so this is how we get access to it instead.\u001b[39;00m\n\u001b[1;32m    330\u001b[0m     \u001b[38;5;66;03m# `ensure_compile_time_eval` just in case someone is doing deserialisation\u001b[39;00m\n\u001b[1;32m    331\u001b[0m     \u001b[38;5;66;03m# inside JIT. Which would be weird, but still.\u001b[39;00m\n\u001b[1;32m    332\u001b[0m     array_impl_type \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mtype\u001b[39m(jnp\u001b[38;5;241m.\u001b[39marray(\u001b[38;5;241m0\u001b[39m))\n\u001b[0;32m--> 333\u001b[0m \u001b[43mjtu\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mtree_map_with_path\u001b[49m\u001b[43m(\u001b[49m\u001b[43m_assert_same\u001b[49m\u001b[43m(\u001b[49m\u001b[43marray_impl_type\u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mout\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mlike\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mis_leaf\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mis_leaf\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    334\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m out\n",
+      "File \u001b[0;32m~/miniconda3/envs/jaxtts/lib/python3.11/site-packages/jax/_src/tree_util.py:1200\u001b[0m, in \u001b[0;36mtree_map_with_path\u001b[0;34m(f, tree, is_leaf, *rest)\u001b[0m\n\u001b[1;32m   1198\u001b[0m keypath_leaves \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mlist\u001b[39m(\u001b[38;5;28mzip\u001b[39m(\u001b[38;5;241m*\u001b[39mkeypath_leaves))\n\u001b[1;32m   1199\u001b[0m all_keypath_leaves \u001b[38;5;241m=\u001b[39m keypath_leaves \u001b[38;5;241m+\u001b[39m [treedef\u001b[38;5;241m.\u001b[39mflatten_up_to(r) \u001b[38;5;28;01mfor\u001b[39;00m r \u001b[38;5;129;01min\u001b[39;00m rest]\n\u001b[0;32m-> 1200\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mtreedef\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43munflatten\u001b[49m\u001b[43m(\u001b[49m\u001b[43mf\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mxs\u001b[49m\u001b[43m)\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43;01mfor\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43mxs\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;129;43;01min\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[38;5;28;43mzip\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mall_keypath_leaves\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m~/miniconda3/envs/jaxtts/lib/python3.11/site-packages/jax/_src/tree_util.py:1200\u001b[0m, in \u001b[0;36m<genexpr>\u001b[0;34m(.0)\u001b[0m\n\u001b[1;32m   1198\u001b[0m keypath_leaves \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mlist\u001b[39m(\u001b[38;5;28mzip\u001b[39m(\u001b[38;5;241m*\u001b[39mkeypath_leaves))\n\u001b[1;32m   1199\u001b[0m all_keypath_leaves \u001b[38;5;241m=\u001b[39m keypath_leaves \u001b[38;5;241m+\u001b[39m [treedef\u001b[38;5;241m.\u001b[39mflatten_up_to(r) \u001b[38;5;28;01mfor\u001b[39;00m r \u001b[38;5;129;01min\u001b[39;00m rest]\n\u001b[0;32m-> 1200\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m treedef\u001b[38;5;241m.\u001b[39munflatten(\u001b[43mf\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mxs\u001b[49m\u001b[43m)\u001b[49m \u001b[38;5;28;01mfor\u001b[39;00m xs \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mzip\u001b[39m(\u001b[38;5;241m*\u001b[39mall_keypath_leaves))\n",
+      "File \u001b[0;32m~/miniconda3/envs/jaxtts/lib/python3.11/site-packages/equinox/_serialisation.py:178\u001b[0m, in \u001b[0;36m_assert_same.<locals>._assert_same_impl\u001b[0;34m(path, new, old)\u001b[0m\n\u001b[1;32m    176\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(new, (np\u001b[38;5;241m.\u001b[39mndarray, jax\u001b[38;5;241m.\u001b[39mArray)):\n\u001b[1;32m    177\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m new\u001b[38;5;241m.\u001b[39mshape \u001b[38;5;241m!=\u001b[39m old\u001b[38;5;241m.\u001b[39mshape:\n\u001b[0;32m--> 178\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mRuntimeError\u001b[39;00m(\n\u001b[1;32m    179\u001b[0m             \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mDeserialised leaf at path \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mpath\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m has changed shape from \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    180\u001b[0m             \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mold\u001b[38;5;241m.\u001b[39mshape\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m in `like` to \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mnew\u001b[38;5;241m.\u001b[39mshape\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m on disk.\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    181\u001b[0m         )\n\u001b[1;32m    182\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m new\u001b[38;5;241m.\u001b[39mdtype \u001b[38;5;241m!=\u001b[39m old\u001b[38;5;241m.\u001b[39mdtype:\n\u001b[1;32m    183\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mRuntimeError\u001b[39;00m(\n\u001b[1;32m    184\u001b[0m             \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mDeserialised leaf at path \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mpath\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m has changed dtype from \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    185\u001b[0m             \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mold\u001b[38;5;241m.\u001b[39mdtype\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m in `like` to \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mnew\u001b[38;5;241m.\u001b[39mdtype\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m on disk.\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    186\u001b[0m         )\n",
+      "\u001b[0;31mRuntimeError\u001b[0m: Deserialised leaf at path (GetAttrKey(name='quantizer'), GetAttrKey(name='codebook')) has changed shape from (1024, 512) in `like` to (1024,) on disk."
+     ]
+    }
+   ],
    "source": [
     "%matplotlib inline\n",
     "from IPython.display import display, clear_output\n",
     "import matplotlib.pyplot as plt\n",
     "from VQVAE import VQVAE\n",
     "import datetime\n",
+    "import jax.numpy as jnp\n",
     "import os\n",
     "import jax\n",
     "import optax\n",
+    "import equinox as eqx\n",
     "from tensorboardX import SummaryWriter\n",
     "\n",
-    "dataset_path = \"dataset/mels\"\n",
+    "dataset_path = \"../HiFiGAN-for-JAX/dataset/mels\"\n",
     "\n",
     "mel_file_paths = os.listdir(dataset_path)\n",
     "\n",
@@ -1206,7 +1225,7 @@
     "key1, key2 = jax.random.split(key, 2)\n",
     "\n",
     "model = VQVAE(key=key1)\n",
-    "\n",
+    "model = eqx.tree_deserialise_leaves(\"../../XTTSv2-Finetuning-for-New-Languages/xttsvqvae.eqx\", model)\n",
     "optimizer = optax.adam(1e-4)\n",
     "opt_state = optimizer.init(model)\n",
     "\n",
@@ -1304,7 +1323,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.11.10"
   }
  },
  "nbformat": 4,
