padding issues fixed

--- a/VQVAE.ipynb
+++ b/VQVAE.ipynb
@@ -32,7 +32,7 @@
     "filters:\n",
     "  - code-visibility\n",
     "theme: united\n",
-    "github: \"https://github.com/TugdualKerjan/Audio-VQVAE-for-JAX\"\n",
+    "github: \"https://github.com/TugdualKerjan/HiFiGAN-for-JAX\"\n",
     "lightbox: true\n",
     "---"
    ]
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "tags": [
      "export"
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "tags": [
      "export"
@@ -230,9 +230,9 @@
     "\n",
     "        key1, key2, key3 = jax.random.split(key, 3)\n",
     "\n",
-    "        self.conv1 = nn.Conv1d(dim, dim, kernel_size=3, padding=\"SAME\", key=key1)\n",
-    "        self.conv2 = nn.Conv1d(dim, dim, kernel_size=3, padding=\"SAME\", key=key2)\n",
-    "        self.conv3 = nn.Conv1d(dim, dim, kernel_size=1, padding=\"SAME\", key=key3)\n",
+    "        self.conv1 = nn.Conv1d(dim, dim, kernel_size=3, padding=(1,), key=key1)\n",
+    "        self.conv2 = nn.Conv1d(dim, dim, kernel_size=3, padding=(1,), key=key2)\n",
+    "        self.conv3 = nn.Conv1d(dim, dim, kernel_size=1, key=key3)\n",
     "\n",
     "        self.act = activation\n",
     "\n",
@@ -267,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "tags": [
      "export"
@@ -291,7 +291,7 @@
     "            out_channels=512,\n",
     "            kernel_size=3,\n",
     "            stride=2,\n",
-    "            padding=\"SAME\",\n",
+    "            padding=(1,),\n",
     "            key=key1,\n",
     "        )\n",
     "        self.conv2 = nn.Conv1d(\n",
@@ -299,7 +299,7 @@
     "            out_channels=hidden_dim,\n",
     "            kernel_size=3,\n",
     "            stride=2,\n",
-    "            padding=\"SAME\",\n",
+    "            padding=(1,),\n",
     "            key=key2,\n",
     "        )\n",
     "        self.res1 = ResBlock(dim=hidden_dim, key=key3)\n",
@@ -310,7 +310,7 @@
     "            out_channels=codebook_dim,\n",
     "            kernel_size=1,\n",
     "            stride=1,\n",
-    "            padding=\"SAME\",\n",
+    "            # padding=\"SAME\",\n",
     "            key=key6,\n",
     "        )\n",
     "\n",
@@ -339,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "tags": [
      "export"
@@ -364,7 +364,7 @@
     "            out_channels=hidden_dim,\n",
     "            kernel_size=1,\n",
     "            stride=1,\n",
-    "            padding=\"SAME\",\n",
+    "            # padding=\"SAME\",\n",
     "            key=key1,\n",
     "        )\n",
     "        self.res1 = ResBlock(dim=hidden_dim, key=key2)\n",
@@ -375,7 +375,7 @@
     "            out_channels=hidden_dim,\n",
     "            kernel_size=3,\n",
     "            stride=2,\n",
-    "            padding=\"SAME\",\n",
+    "            padding=(1,),\n",
     "            key=key5,\n",
     "        )\n",
     "        self.conv3 = UpsampledConv(\n",
@@ -383,7 +383,7 @@
     "            out_channels=512,\n",
     "            kernel_size=3,\n",
     "            stride=2,\n",
-    "            padding=\"SAME\",\n",
+    "            padding=(1,),\n",
     "            key=key6,\n",
     "        )\n",
     "        self.conv4 = nn.Conv1d(\n",
@@ -391,7 +391,7 @@
     "            out_channels=80,\n",
     "            kernel_size=1,\n",
     "            stride=1,\n",
-    "            padding=\"SAME\",\n",
+    "            # padding=\"SAME\",\n",
     "            key=key7,\n",
     "        )\n",
     "\n",
@@ -444,9 +444,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([3, 80, 200])\n",
+      "torch.Size([3, 512, 200])\n"
+     ]
+    }
+   ],
    "source": [
     "# | code-fold: true\n",
     "\n",
@@ -569,7 +578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "tags": [
      "export"
@@ -764,7 +773,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "tags": [
      "export"
@@ -883,7 +892,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -931,7 +940,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
